# jarvis

./: .env.example  .gitignore  CLAUDE.md  README.md  coverage.json  coverage_TASK-J002-019.json  coverage_TASK-J002-021.json  coverage_TASK-J003-007.json  coverage_TASK-J003-007_full.json  coverage_TASK-J003-018.json  coverage_dispatch.json  coverage_full.json  coverage_full_phase4.json  coverage_general.json  coverage_phase4.json  coverage_phase4_TASK-J003-007.json  coverage_phase4_TASK-J003-009.json  coverage_phase4_TASK-J003-011.json  coverage_phase4_TASK-J003-012.json  coverage_phase4_TASK-J003-015.json  coverage_phase4_TASK-J003-015_full.json  coverage_phase4_TASK-J003-017.json  coverage_phase4_TASK-J003-018.json  coverage_phase4_TASK-J003-019.json  coverage_phase4_TASK-J003-022.json  coverage_phase4_task012.json  coverage_task022_full.json  coverage_task022_tools.json  coverage_tools_TASK-J002-019.json  langgraph.json  pyproject.toml
.claude/: CLAUDE.md  manifest.json  settings.json
.claude/agents/: deepagents-orchestrator-specialist-ext.md  deepagents-orchestrator-specialist.md  domain-context-injection-specialist-ext.md  domain-context-injection-specialist.md  langchain-tool-decorator-specialist-ext.md  langchain-tool-decorator-specialist.md  langgraph-deployment-config-specialist-ext.md  langgraph-deployment-config-specialist.md  pytest-agent-testing-specialist-ext.md  pytest-agent-testing-specialist.md  subagent-composition-specialist-ext.md  subagent-composition-specialist.md  system-prompt-template-specialist-ext.md  system-prompt-template-specialist.md
.claude/reviews/: FEAT-JARVIS-001-review-report.md  FEAT-JARVIS-002-review-report.md  FEAT-JARVIS-003-review-report.md  TASK-REV-22CF-review-report.md  TASK-REV-J002-review-report.md  TASK-REV-J003-review-report.md
.claude/rules/: code-style.md  testing.md
.claude/task-plans/: TASK-J001-003-implementation-plan.md  TASK-J001-005-implementation-plan.md  TASK-J001-006-implementation-plan.md  TASK-J001-007-implementation-plan.md  TASK-J001-008-implementation-plan.md  TASK-J002-008-implementation-plan.md  TASK-J002-009-implementation-plan.md  TASK-J002-011-implementation-plan.md  TASK-J002-012-implementation-plan.md  TASK-J002-013-implementation-plan.md  TASK-J002-014-implementation-plan.md  TASK-J002-017-implementation-plan.md  TASK-J002-019-implementation-plan.md  TASK-J002-021-implementation-plan.md  TASK-J002-022-implementation-plan.md  TASK-J003-007-implementation-plan.md  TASK-J003-008-implementation-plan.md  TASK-J003-009-implementation-plan.md  TASK-J003-010-implementation-plan.md  TASK-J003-011-implementation-plan.md  TASK-J003-012-implementation-plan.md  TASK-J003-013-implementation-plan.md  TASK-J003-015-implementation-plan.md  TASK-J003-017-implementation-plan.md  TASK-J003-018-implementation-plan.md  TASK-J003-019-implementation-plan.md  TASK-J003-021-implementation-plan.md  TASK-J003-022-implementation-plan.md  TASK-J003-023-implementation-plan.md
.guardkit/: .mcp.json  bootstrap_state.json  context-manifest.yaml  graphiti.yaml
.guardkit/bdd/: TASK-J003-007_junit.xml  TASK-J003-008_junit.xml  TASK-J003-009_junit.xml  TASK-J003-010_junit.xml  TASK-J003-011_junit.xml  TASK-J003-012_junit.xml  TASK-J003-013_junit.xml  TASK-J003-015_junit.xml  TASK-J003-017_junit.xml  TASK-J003-019_junit.xml  TASK-J003-022_junit.xml  TASK-J003-023_junit.xml
.guardkit/features/: FEAT-J002.yaml  FEAT-J003-FIX.yaml  FEAT-J003.yaml  FEAT-J004-702C.yaml  FEAT-JARVIS-001.yaml
.guardkit/worktrees/: nats-core
docs/: README.md
docs/architecture/: ARCHITECTURE.md  assumptions.yaml  container.md  domain-model.md  system-context.md
docs/history/: autobuild-FEAT-J002-history.md  autobuild-FEAT-J003-history-cancelled.md  autobuild-FEAT-J004-702C-history.md  autobuild-feature-FEAT-J004-702C-still-fails-history.md  command_history.md  feature-design-history.md  feature-plan-FEAT-J004-702C-history.md  feature-plan-FEAT-JARVIS-001-history.md  feature-plan-JARVIS-003-async-subagent-history.md  feature-plan_JARVIS-002-history.md  feature-spec-FEAT-JARVIS-001.md  feature-spec-JARVIS-003-history.md  feature-spec-NATS-Fleet-Registration&Specialist-Dispatch-history.md  feature-spec-core-tools.md  superseded-designs.md  system-arch-history.md  system-design FEAT-JARVIS-003.md  system-design-FEAT-JARVIS-002-history.md  system-design-FEAT-JARVIS-004-history.md  system-design-history.md  task-review-FEAT-JARVIS-002-history.md  task-review-FEAT-JARVIS-003-history.md  temp-tests-failure.md  temp2-still-failing.md
features/: conftest.py
features/feat-jarvis-002-core-tools-and-dispatch/: feat-jarvis-002-core-tools-and-dispatch.feature  feat-jarvis-002-core-tools-and-dispatch_assumptions.yaml  feat-jarvis-002-core-tools-and-dispatch_summary.md  test_feat_jarvis_002_core_tools_and_dispatch.py
features/feat-jarvis-003-async-subagent-and-frontier-escape/: feat-jarvis-003-async-subagent-and-frontier-escape.feature  feat-jarvis-003-async-subagent-and-frontier-escape_assumptions.yaml  (+2 more)
scripts/: gen_feat_j002_tasks.py
tests/: conftest.py  test_adapters_llamaswap.py  test_assemble_tool_list.py  test_assemble_tool_list_layer3.py  test_async_task_input.py  test_build_system.py  test_capabilities.py  test_cli.py  test_config.py  test_config_feat_j003.py  test_config_phase2.py  test_correlation.py  test_developer_surface.py  test_dispatch_by_capability.py  test_dispatch_types_frontier_escalation.py  test_escalate_to_frontier.py  test_general_calculate.py  test_get_calendar_events.py  test_import_graph.py  test_infrastructure.py  test_jarvis_reasoner_description.py  test_langgraph_json.py  test_lifecycle_layer2_wiring.py  test_lifecycle_startup_phase3.py  test_llamaswap_adapter.py  test_load_stub_registry.py  test_no_retired_roster_strings.py  test_phase2_dependencies.py  test_phase3_dependencies.py  test_prompts.py  test_reserved_packages.py  test_role_prompts.py  test_role_propagation_e2e.py  test_routing_e2e.py  test_search_web.py  test_sessions.py  test_shared.py  test_smoke_end_to_end.py  test_stub_capabilities.py  test_subagent_prompts.py  (+20 more)
(+814 files in other folders)
