[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jarvis"
version = "0.1.0"
description = "General purpose agent providing access to the Forge and other agents on the NATS Jetstream event bus"
requires-python = ">=3.12,<3.13"
license = "Apache-2.0"
authors = [
    { name = "Appmilla" },
]
keywords = ["agent", "deepagents", "langchain", "langgraph", "nats"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "deepagents>=0.5.3,<0.6",
    "langchain-core>=0.3",
    "langgraph>=0.3",
    "langchain-openai>=0.2",
    "pydantic>=2",
    "pydantic-settings>=2",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
providers = [
    "langchain-anthropic>=0.2",
    "langchain-google-genai>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6",
    "types-click>=7.1",
]

[project.scripts]
jarvis = "jarvis.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis"]

# ---------------------------------------------------------------------------
# ruff — ADR-ARCH-015
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]

# ---------------------------------------------------------------------------
# mypy — ADR-ARCH-015 (strict mode)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "deepagents.*",
    "langchain.*",
    "langchain_core.*",
    "langchain_openai.*",
    "langchain_anthropic.*",
    "langchain_google_genai.*",
    "langgraph.*",
    "structlog.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest — ADR-ARCH-015
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short -q"
